[tool.poetry]
name = "olive-backend"
version = "0.1.0"
description = ""
authors = ["DrProfSgtMrJ"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["standard"], version = "^0.115.12"}
fastapi-pagination = "^0.12.34"
dotenv = "^0.9.9"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
